# ve

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: lib.rs  macros.rs  raw_vec.rs  slice.rs  vec.rs
tests/: vec.rs
